# mini_shell

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
config/: ms_config_template.h
example/linux/: CMakeLists.txt  main.c  ms_config.h
src/: ms.c  ms.h  ms_list.c  ms_list.h
src/om_core/: om_lib.h  om_list.h
